--- a/index.html
+++ b/index.html
@@ -4,67 +4,86 @@
   <title>Cacahuate Paradise</title>
   <style>
     body {
-      background-image: url('https://www.animatedimages.org/data/media/562/animated-forest-image-0010.gif');
+      background-image: url('https://www.animatedimages.org/data/media/562/animated-forest-image-0011.gif');
       background-repeat: repeat;
       background-attachment: fixed;
-      color: #FFFF00;
+      color: yellow;
       font-family: "Comic Sans MS", cursive, sans-serif;
       text-align: center;
     }
 
     h1 {
-      font-size: 48px;
-      text-shadow: 2px 2px #FF00FF;
-      margin-top: 30px;
+      font-size: 60px;
+      color: red;
+      text-shadow: 3px 3px #0000FF;
+      margin-top: 20px;
+    }
+
+    .marquee-text {
+      font-size: 24px;
+      color: orange;
+      background-color: rgba(0, 0, 0, 0.5);
+      padding: 10px;
     }
 
     .blink {
       animation: blinker 1s linear infinite;
+      font-size: 24px;
+      color: blue;
     }
 
     @keyframes blinker {
-      50% {
-        opacity: 0;
-      }
+      50% { opacity: 0; }
     }
 
     .beetle {
-      width: 60px;
+      width: 80px;
       margin: 10px;
     }
 
-    .gif-row {
-      margin-top: 20px;
+    .container {
+      border: 5px dashed red;
+      padding: 20px;
+      background-color: rgba(0, 0, 0, 0.6);
+      margin: 40px;
     }
 
-    .border {
-      border: 5px ridge lime;
-      padding: 20px;
-      background-color: rgba(0,0,0,0.5);
+    a {
+      color: orange;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    a:hover {
+      color: yellow;
     }
   </style>
 </head>
 <body>
-  <div class="border">
+
+  <div class="container">
     <h1>🌰 Cacahuate Paradise 🌰</h1>
 
-    <marquee behavior="alternate" direction="left" scrollamount="10">
-      <img src="https://i.gifer.com/8KPb.gif" class="beetle" alt="escarabajo">
-      <b>¡Bienvenido a la web más escarabajosa del bosque!</b>
-      <img src="https://i.gifer.com/8KPb.gif" class="beetle" alt="escarabajo">
+    <marquee behavior="alternate" class="marquee-text">
+      ¡Bienvenido al rincón más retro del bosque!
     </marquee>
 
     <p class="blink">⚠️ ¡Sitio en construcción desde 1999! ⚠️</p>
 
     <img src="https://www.animatedimages.org/data/media/175/animated-under-construction-image-0016.gif" alt="Under construction">
 
-    <div class="gif-row">
-      <img src="https://i.gifer.com/8KPb.gif" class="beetle" alt="escarabajo 1">
-      <img src="https://i.gifer.com/8KPb.gif" class="beetle" alt="escarabajo 2">
-      <img src="https://i.gifer.com/8KPb.gif" class="beetle" alt="escarabajo 3">
+    <div>
+      <img src="https://clipart-library.com/images/8czrAqXzi.gif" class="beetle" alt="escarabajo real 1">
+      <img src="https://clipart-library.com/images/6TpxEKXni.gif" class="beetle" alt="escarabajo real 2">
+      <img src="https://clipart-library.com/images/8czrAqXzi.gif" class="beetle" alt="escarabajo real 3">
     </div>
 
-    <p><a href="mailto:cacahuate@geocities.com">Contáctanos por correo (versión Hotmail)</a></p>
+    <p style="color: orange; font-size: 20px;">🌳 ¡Explora los misterios del bosque y los escarabajos cacahuateros! 🌳</p>
+
+    <p>
+      <a href="mailto:cacahuate@geocities.com">Contáctanos por correo (Hotmail disponible)</a>
+    </p>
   </div>
+
 </body>
 </html>
