--- a/index.html
+++ b/index.html
@@ -1,89 +1,50 @@
-<!DOCTYPE html>
 <html>
+
 <head>
-  <title>Cacahuate Paradise</title>
-  <style>
-    body {
-      background-image: url('https://www.animatedimages.org/data/media/562/animated-forest-image-0011.gif');
-      background-repeat: repeat;
-      background-attachment: fixed;
-      color: yellow;
-      font-family: "Comic Sans MS", cursive, sans-serif;
-      text-align: center;
-    }
-
-    h1 {
-      font-size: 60px;
-      color: red;
-      text-shadow: 3px 3px #0000FF;
-      margin-top: 20px;
-    }
-
-    .marquee-text {
-      font-size: 24px;
-      color: orange;
-      background-color: rgba(0, 0, 0, 0.5);
-      padding: 10px;
-    }
-
-    .blink {
-      animation: blinker 1s linear infinite;
-      font-size: 24px;
-      color: blue;
-    }
-
-    @keyframes blinker {
-      50% { opacity: 0; }
-    }
-
-    .beetle {
-      width: 80px;
-      margin: 10px;
-    }
-
-    .container {
-      border: 5px dashed red;
-      padding: 20px;
-      background-color: rgba(0, 0, 0, 0.6);
-      margin: 40px;
-    }
-
-    a {
-      color: orange;
-      text-decoration: none;
-      font-weight: bold;
-    }
-
-    a:hover {
-      color: yellow;
-    }
-  </style>
+<meta http-equiv="Content-Language" content="es-mx">
+<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+<title>Pescadores de hombres</title>
+<base href="https://www.pescadoresdehombres.html">
+<meta name="keywords" content="pescador de hombres jesus cristo predicar evangelio predicacion dios cristianismo cristiano">
+<meta name="description" content="los 7 pasos para ser un pescador de hombres">
 </head>
-<body>
 
-  <div class="container">
-    <h1>🌰 Cacahuate Paradise 🌰</h1>
+<body bgcolor="#FFFFFF">
 
-    <marquee behavior="alternate" class="marquee-text">
-      ¡Bienvenido al rincón más retro del bosque!
-    </marquee>
-
-    <p class="blink">⚠️ ¡Sitio en construcción desde 1999! ⚠️</p>
-
-    <img src="https://www.animatedimages.org/data/media/175/animated-under-construction-image-0016.gif" alt="Under construction">
-
-    <div>
-      <img src="https://clipart-library.com/images/8czrAqXzi.gif" class="beetle" alt="escarabajo real 1">
-      <img src="https://clipart-library.com/images/6TpxEKXni.gif" class="beetle" alt="escarabajo real 2">
-      <img src="https://clipart-library.com/images/8czrAqXzi.gif" class="beetle" alt="escarabajo real 3">
-    </div>
-
-    <p style="color: orange; font-size: 20px;">🌳 ¡Explora los misterios del bosque y los escarabajos cacahuateros! 🌳</p>
-
-    <p>
-      <a href="mailto:cacahuate@geocities.com">Contáctanos por correo (Hotmail disponible)</a>
-    </p>
-  </div>
+<table border="0" cellspacing="1" width="1695" height="845" style="border: 3px outset #FFFFFF; padding-left: 6px; padding-right: 6px; padding-top: 1px; padding-bottom: 1px" bgcolor="#FFFFFF" bordercolorlight="#FFFFFF" bordercolordark="#000000">
+	<!-- MSTableType="nolayout" -->
+	<tr style="border-style: inset; border-width: 1px">
+		<td valign="top" colspan="2" height="115" bordercolorlight="#FFFFCC" bordercolordark="#FFFFFF" style="border-style: outset; border-width: 5px; padding: 0" bgcolor="#0066CC">
+		<!-- MSCellType="ContentHead" -->
+		<p align="center">&nbsp;</p>
+		<p align="center"><font size="6" color="#FFFFFF">Pescadores de hombres
+		</font></td>
+	</tr>
+	<tr style="border: 2px ridge #FFFFFF">
+		<td valign="top" rowspan="2" width="293" bgcolor="#3399FF" style="border-style: outset; border-width: 3px; padding-left: 4px; padding-right: 4px; padding-top: 1px; padding-bottom: 1px" bordercolorlight="#FFFFFF" bordercolordark="#FFFFFF">
+		<!-- MSCellType="NavBody" -->
+		1-. Estar en el lago </td>
+		<td valign="top" height="77" style="border: 3px outset #FFFFFF" bgcolor="#FFFFFF">
+		<!-- MSCellType="ContentHead2" -->
+		&nbsp;</td>
+	</tr>
+	<tr>
+		<td valign="top" height="653" width="1402" bgcolor="#FFFFFF" style="border-style: inset; border-width: 5px; padding-left: 4px; padding-right: 4px; padding-top: 1px; padding-bottom: 1px">
+		<!-- MSCellType="ContentBody" -->
+		&nbsp;<p>&nbsp;</p>
+		<p>&nbsp;</p>
+		<p>&nbsp;</p>
+		<p>&nbsp;</p>
+		<p>&nbsp;</p>
+		<p>&nbsp;</p>
+		<p>&nbsp;</p>
+		<p>&nbsp;</p>
+		<p>&nbsp;</p>
+		<p>&nbsp;</p>
+		<p>&nbsp;</td>
+	</tr>
+</table>
 
 </body>
+
 </html>
