--- a/index.html
+++ b/index.html
@@ -11,38 +11,71 @@
 
 <body bgcolor="#FFFFFF">
 
-<table border="0" cellspacing="1" width="1695" height="845" style="border: 3px outset #FFFFFF; padding-left: 6px; padding-right: 6px; padding-top: 1px; padding-bottom: 1px" bgcolor="#FFFFFF" bordercolorlight="#FFFFFF" bordercolordark="#000000">
-	<!-- MSTableType="nolayout" -->
-	<tr style="border-style: inset; border-width: 1px">
-		<td valign="top" colspan="2" height="115" bordercolorlight="#FFFFCC" bordercolordark="#FFFFFF" style="border-style: outset; border-width: 5px; padding: 0" bgcolor="#0066CC">
+<table border="0" cellspacing="1" width="1513" height="421" style="border: 3px outset #FFFFFF; padding-left: 6px; padding-right: 6px; padding-top: 1px; padding-bottom: 1px" bgcolor="#FFFFFF" bordercolorlight="#FFFFFF" bordercolordark="#000000">
+	<!-- MSTableType="layout" -->
+	<tr>
+		<td valign="top" colspan="2" height="131" bordercolorlight="#FFFFCC" bordercolordark="#FFFFFF" style="border-style: outset; border-width: 5px; padding: 0" bgcolor="#0066CC">
 		<!-- MSCellType="ContentHead" -->
 		<p align="center">&nbsp;</p>
-		<p align="center"><font size="6" color="#FFFFFF">Pescadores de hombres
-		</font></td>
+		<p align="center"><font size="7" color="#FFFFFF">Pescadores de hombres</font></td>
 	</tr>
-	<tr style="border: 2px ridge #FFFFFF">
-		<td valign="top" rowspan="2" width="293" bgcolor="#3399FF" style="border-style: outset; border-width: 3px; padding-left: 4px; padding-right: 4px; padding-top: 1px; padding-bottom: 1px" bordercolorlight="#FFFFFF" bordercolordark="#FFFFFF">
+	<tr>
+		<th valign="top" bgcolor="#FFFFCC" style="border-style: outset; border-width: 3px; padding-left: 4px; padding-right: 4px; padding-top: 1px; padding-bottom: 1px" bordercolorlight="#FFFFFF" bordercolordark="#FFFFFF">
 		<!-- MSCellType="NavBody" -->
-		1-. Estar en el lago </td>
-		<td valign="top" height="77" style="border: 3px outset #FFFFFF" bgcolor="#FFFFFF">
+		<font size="6">Inicio</font></th>
+		<td valign="top" height="44" style="border: 3px outset #FFFFFF" bgcolor="#FFFFFF">
 		<!-- MSCellType="ContentHead2" -->
 		&nbsp;</td>
 	</tr>
 	<tr>
-		<td valign="top" height="653" width="1402" bgcolor="#FFFFFF" style="border-style: inset; border-width: 5px; padding-left: 4px; padding-right: 4px; padding-top: 1px; padding-bottom: 1px">
+		<th valign="top" bgcolor="#FFFFCC" style="border-style: outset; border-width: 3px; padding-left: 4px; padding-right: 4px; padding-top: 1px; padding-bottom: 1px" bordercolorlight="#FFFFFF" bordercolordark="#FFFFFF" height="30">
+		<!-- MSCellType="NavBody" -->
+		<font size="5">
+		<a href="file:///C:/Users/CARDUL/Documents/My%20Web%20Sites/Estar%20en%20el%20lago.htm">
+		Estar en el lago</a></font></th>
+		<td valign="top" width="1225" bgcolor="#FFFFFF" style="border-style: inset; border-width: 5px; padding-left: 4px; padding-right: 4px; padding-top: 1px; padding-bottom: 1px" rowspan="8">
 		<!-- MSCellType="ContentBody" -->
 		&nbsp;<p>&nbsp;</p>
 		<p>&nbsp;</p>
 		<p>&nbsp;</p>
 		<p>&nbsp;</p>
-		<p>&nbsp;</p>
-		<p>&nbsp;</p>
-		<p>&nbsp;</p>
-		<p>&nbsp;</p>
-		<p>&nbsp;</p>
-		<p>&nbsp;</p>
 		<p>&nbsp;</td>
 	</tr>
+	<tr>
+		<th valign="top" bgcolor="#FFFFCC" style="border-style: outset; border-width: 3px; padding-left: 4px; padding-right: 4px; padding-top: 1px; padding-bottom: 1px" bordercolorlight="#FFFFFF" bordercolordark="#FFFFFF" height="30">
+		<!-- MSCellType="NavBody" -->
+		<font size="5">Preparar la red</font></th>
+		</tr>
+	<tr>
+		<th valign="top" bgcolor="#FFFFCC" style="border-style: outset; border-width: 3px; padding-left: 4px; padding-right: 4px; padding-top: 1px; padding-bottom: 1px" bordercolorlight="#FFFFFF" bordercolordark="#FFFFFF" height="30">
+		<!-- MSCellType="NavBody" -->
+		<font size="5">Lanzar la red</font></th>
+		</tr>
+	<tr>
+		<th valign="top" bgcolor="#FFFFCC" style="border-style: outset; border-width: 3px; padding-left: 4px; padding-right: 4px; padding-top: 1px; padding-bottom: 1px" bordercolorlight="#FFFFFF" bordercolordark="#FFFFFF" height="30">
+		<!-- MSCellType="NavBody" -->
+		<font size="5">Ser paciente</font></th>
+		</tr>
+	<tr>
+		<th valign="top" bgcolor="#FFFFCC" style="border-style: outset; border-width: 3px; padding-left: 4px; padding-right: 4px; padding-top: 1px; padding-bottom: 1px" bordercolorlight="#FFFFFF" bordercolordark="#FFFFFF" height="30">
+		<!-- MSCellType="NavBody" -->
+		<font size="5">Ser astuto</font></th>
+		</tr>
+	<tr>
+		<th valign="top" bgcolor="#FFFFCC" style="border-style: outset; border-width: 3px; padding-left: 4px; padding-right: 4px; padding-top: 1px; padding-bottom: 1px" bordercolorlight="#FFFFFF" bordercolordark="#FFFFFF" height="30">
+		<!-- MSCellType="NavBody" -->
+		<font size="5">Fe</font></th>
+		</tr>
+	<tr>
+		<th valign="top" bgcolor="#FFFFCC" style="border-style: outset; border-width: 3px; padding-left: 4px; padding-right: 4px; padding-top: 1px; padding-bottom: 1px" bordercolorlight="#FFFFFF" bordercolordark="#FFFFFF" height="28">
+		<!-- MSCellType="NavBody" -->
+		<font size="5">Conseguir el objetivo</font></th>
+		</tr>
+	<tr>
+		<th valign="top" width="247" bgcolor="#FFFFCC" style="border-style: outset; border-width: 3px; padding-left: 4px; padding-right: 4px; padding-top: 1px; padding-bottom: 1px" bordercolorlight="#FFFFFF" bordercolordark="#FFFFFF" height="300">
+		<!-- MSCellType="NavBody" -->
+		&nbsp;</th>
+		</tr>
 </table>
 
 </body>
