--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                 <main>
                     <h1>Welcome to my Layout Maker!</h1>
                     <p><strong>Please read this first!</strong></p>
-                    <p>This tool generates a layout that is responsive, which means it looks great on phones! Use dropdowns above to customize your layout's general features. Click the button to generate your HTML and CSS, and paste it into a file on Neocities.</p>
-                    <p>Then you can replace all of the text with your own. For more customization, the CSS code has comments to explain what each part changes. Please read through the code - even if you have no idea what it means.</p>
+                    <p>HOLA!!!!!! bienvenida mi amor, esta pagina esta hecha con mucho cariño para ti, ire añadiendo cosas con el tiempo espero que te agrade :D.</p>
+                    <p>El fin de esto es mas que nada agradecerte por todo lo que haces por mi, mi cielo.</p>
                     <p>If you're feeling up for a challenge, I put together <a href="learn/understanding-tweaking-my-layout-maker/" target="_blank">a guide</a> which goes over the structure of how this layout is built, along with some specific tips on how to edit it in certain ways.</p>
                     <p>Check the links in the sidebar for more resources to build your own website!</p>
 
