--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
             :root {
                 --header-image: url('https://sadhost.neocities.org/images/layouts/wp.jpeg');
-                --body-bg-image: url('https://sadhost.neocities.org/images/tiles/purplesky.gif');
+                --body-bg-image: url(fondochafa.png);
 
                 /* colors */
                 --content: #43256E;
