--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                 /* this is only for a background image! */
                 /* if you want to put images IN the header, 
       you can add them directly to the <div id="header"></div> element! */
-                background-image: var(--header-image);
+                background-image: url(fondochafa.png);
                 background-size: 100%;
             }
 
